[package]
name = "session-util"
version = "0.1.0"
authors = ["Trey Lowerison"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0"
cfg-if = "1"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"], optional = true }
cookie = { version = "0", features = ["secure", "percent-encode"] }
data-encoding = "2"
deadpool = "0"
derivative = "2"
derive_more = "0"
futures = "0"
http = "0"
hyper = "0"
jsonwebtoken = "8"
log = "0"
percent-encoding = "2"
pin-project-lite = "0"
redis_cluster_async = "0"
ring = "0"
serde = "1"
serde_json = "1"
serde_plain = "1"
tokio = "1"
tower-layer = "0"
tower-service = "0"
tracing = "0"
typed-builder = "0"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

serde_with = { version = "2", optional = true }

axum-core-02 = { package = "axum-core", version = "0.2", optional = true }
axum-core-03 = { package = "axum-core", version = "0.3", optional = true }

[features]
account = ["dep:serde_with"]
axum-core-02 = ["dep:axum-core-02"]
axum-core-03 = ["dep:axum-core-03"]
cli = ["dep:clap"]

[[bin]]
name = "create_service_account_jwt"
required-features = ["account","cli"]
