[package]
name = "session-util"
version = "0.1.0"
authors = ["Trey Lowerison"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0"
cfg-if = "1"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"], optional = true }
cookie = { version = "0", features = ["secure", "percent-encode"] }
data-encoding = "2"
futures = "0"
http = "0"
hyper = "0"
jsonwebtoken = "8"
percent-encoding = "2"
pin-project-lite = "0"
ring = "0"
serde = "1"
serde_json = "1"
serde_plain = "1"
tokio = "1"
tower-layer = "0"
tower-service = "0"
uuid = { version = "1", features = ["serde", "v4"] }

deadpool = { version = "0", optional = true }
derivative = { version = "2", optional = true }
derive_more = { version = "0", optional = true }
log = { version = "0", optional = true }
redis_cluster_async = { version = "0", optional = true }
serde_with = { version = "2", optional = true }
typed-builder = { version = "0", optional = true }
url = { version = "2", optional = true }

axum-core-02 = { package = "axum-core", version = "0.2", optional = true }
axum-core-03 = { package = "axum-core", version = "0.3", optional = true }

[features]
account-session = ["dep:derive_more", "dep:derivative", "dep:serde_with", "dep:typed-builder"]
axum-core-02 = ["dep:axum-core-02", "dep:log"]
axum-core-03 = ["dep:axum-core-03", "dep:log"]
cli = ["dep:clap"]
redis-backend = ["dep:deadpool", "dep:derivative", "dep:log", "dep:redis_cluster_async", "dep:typed-builder", "dep:url"]

[[bin]]
name = "create_account_jwt"
required-features = ["account-session","cli"]
