[package]
name = "session-util"
version = "0.1.0"
authors = ["Trey Lowerison"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cfg-if = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"], optional = true }
cookie = { version = "0.18", features = ["secure", "percent-encode"] }
data-encoding = "2.5"
futures = "0.3"
http = "1.0"
http-body = "1.0"
hyper = "1.1"
jsonwebtoken = "9.2"
percent-encoding = "2.3"
pin-project-lite = "0.2"
ring = "0.17"
serde = "1.0"
serde_json = "1.0"
serde_plain = "1.0"
tokio = "1.35"
tower-layer = "0.3"
tower-service = "0.3"
uuid = { version = "1.7", features = ["serde", "v4"] }

axum-core = { version = "0.4", optional = true }
deadpool = { version = "0.10", optional = true }
derivative = { version = "2.2", optional = true }
derive_more = { version = "0.99", optional = true }
log = { version = "0.4", optional = true }
redis_cluster_async = { version = "0.8", optional = true }
serde_with = { version = "3.5", optional = true }
typed-builder = { version = "0.18", optional = true }
url = { version = "2.5", optional = true }

[features]
account-session = ["dep:derive_more", "dep:derivative", "dep:serde_with", "dep:typed-builder"]
axum = ["dep:axum-core", "dep:log"]
cli = ["dep:clap"]
redis-backend = ["dep:deadpool", "dep:derivative", "dep:log", "dep:redis_cluster_async", "dep:typed-builder", "dep:url"]

[[bin]]
name = "create_account_jwt"
required-features = ["account-session","cli"]
